[package]
name = "revelationmap"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
env_logger = "0.11.5"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono"] }
serde_json = "1.0.133"
dotenvy = "0.15.7"
actix-files = "0.6.6"
futures-util = "0.3.31"
